[project]
name = "twitter-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jedi-language-server>=0.44.0",
    "jupyter>=1.1.1",
    "jupyterlab-git>=0.51.0",
    "jupyterlab-lsp>=5.1.0",
    "matplotlib>=3.10.1",
    "notebook-intelligence>=1.2.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pygments>=2.19.1",
    "squarify>=0.4.4",
]
